--- a/_posts/2024-06-15-lcc-313-313-ccl.md
+++ b/_posts/2024-06-15-lcc-313-313-ccl.md
@@ -46,10 +46,10 @@ Recap de KotlinConf [https://x.com/gz_k/status/1793887581433971083?s=46&amp;t=C1
 Quarkus veut aller dans une fondation [https://quarkus.io/blog/quarkus-in-a-foundation/](https://quarkus.io/blog/quarkus-in-a-foundation/)
 
 - ameliorer l'adoption (encore plus), ameliorer la transparence, et la collaboration, encourager la participatiopn multi vendeur
-- Premiere etape : une gouvernance plus overte
-- Deuxieme etape: bouger dans uen foundation
+- Premiere etape : une gouvernance plus ouverte
+- Deuxieme etape: bouger dans une fondation
 - Echange avec la communaute sur la proposition et les fondations cibles
-- Des criteres pour al foudnation (notamment la rapidite de delivery
+- Des criteres pour la fondation (notamment la rapidite de delivery)
 
 Quarkus 3.11 [https://quarkus.io/blog/quarkus-3-11-0-released/](https://quarkus.io/blog/quarkus-3-11-0-released/)
 
@@ -71,28 +71,28 @@ LangChain4j 0.31 est sorti
 - RAG avec les bases de données SQL (expérimental)
 - Récupération des resources remontées par le RAG lorsque AiServices retourne un Result<T>
 - Observabilité LLM pour OpenAI pour être notifié des requêtes, réponses et erreurs
-- Intégration de Cohere (embedding), Jina (embedding et re-ranking scoring), Azuere CosmosDB comme embedding store
+- Intégration de Cohere (embedding), Jina (embedding et re-ranking scoring), Azure CosmosDB comme embedding store
 - Mise à jour de Gemini avec le parallel function calling et les instructions système
 
 Spring Boot 3.3.0 est sorti
 [https://spring.io/blog/2024/05/23/spring-boot-3-3-0-available-now](https://spring.io/blog/2024/05/23/spring-boot-3-3-0-available-now)
 
 - support Class Data Sharing
-- Micrometer sipport de spantag etc
-- Amelioration Spring Security comme JwtAuthenticationCovnerter
+- Micrometer support de spantag etc
+- Amelioration Spring Security comme JwtAuthenticationConverter
 - support docker compose pour les images container bitnami
 - Virtual thread pour les websockets
-- Support sBOM via an actuator
+- Support SBOM via an actuator
 - SNI for embedded web servers
 - une nouvelle doc via antora
 
 Micronaut 4.5 est sortie
 [https://github.com/micronaut-projects/micronaut-platform/releases/tag/v4.5.0](https://github.com/micronaut-projects/micronaut-platform/releases/tag/v4.5.0)
 
-- Le serveur basé sur Netty inclus la détection d’opération bloquante et les modules l’utilisant indiqueront à l’utilisateur quand certaines opérations peuvent être redirigée plutôt sur un virtual thread ou dans le thread pool IO
+- Le serveur basé sur Netty inclus la détection d’opération bloquante et les modules l’utilisant indiqueront à l’utilisateur quand certaines opérations peuvent être redirigées plutôt sur un virtual thread ou dans le thread pool IO
 - Micronaut Data inclus le support de la multitenance avec partitionnement par discriminateur pour  JDBC et R2DBC
 - Micronaut Data rajoute le pagination par curseur pour JDBC et R2DBC (important aussi pour Jakarta Data)
-- Support des annotations Jakarta Servlet pour configurer par exemple les servelet filters
+- Support des annotations Jakarta Servlet pour configurer par exemple les servlet filters
 - Support virtual thread et HTTP/2 
 - Un nouveau module JSON Schema pour générer des JSON Schemas pour les records Java
 - Un nouveau module Source Gen pour faire de la génération de source pour Java et Kotlin cross-language
@@ -123,7 +123,7 @@ JLama, un moteur d‘exécution de LLM en Java avec l’api vector [https://www.
 
 - basé sur llama.c qui est un moteur d'inference de LLM (l'execution des requetes)
 - jlama implementé avec vector APIs et PamanaTensorOperations
-- plusisures alternatives (native binding, iml0ementation pure en java, scala, kotlin)
+- plusisures alternatives (native binding, implementation pure en java, scala, kotlin)
 
 Target Speech Hearing [https://www.infoq.com/news/2024/05/target-speech-hearing/](https://www.infoq.com/news/2024/05/target-speech-hearing/)
 
@@ -154,7 +154,7 @@ IDE de test de JetBrains [https://blog.jetbrains.com/qa/2024/05/aqua-general-ava
 - Aqua, le premier IDE conçu pour l'automatisation des tests, supporte plusieurs langages (Java, Python, JavaScript, TypeScript, Kotlin, SQL) et frameworks de tests (Selenium, Playwright, Cypress).
 - Pourquoi ? Les tests d'applications nécessitent des compétences spécifiques. Aqua, un IDE adapté, est recommandé par les ingénieurs en automatisation des tests.
 - Aqua propose deux plans de licence : un gratuit pour les usages non commerciaux et un payant pour les usages commerciaux.
-- cam me parait un peu contre intuitif a l'heure du devops et du TDD de faire des outils dédiés et donc des equipes ou personnes dédiées
+- ca me parait un peu contre intuitif a l'heure du devops et du TDD de faire des outils dédiés et donc des equipes ou personnes dédiées
 
 
 
@@ -190,20 +190,20 @@ Les APIs web ne devraient pas rediriger HTTP vers HTTPS
 
 - grosso modo le risque majeur est d’envoyer des données confidentielles en clair sur le réseau
 - le mieux serait de ne pas rediriger vers HTTPS, mais par contre de retourner une vraie erreur explicite
-- notamment les clés d’API et c’est facile de ne pas le,voir vu les redirects. 
+- notamment les clés d’API et c’est facile de ne pas le voir vu les redirects. 
 
 
 ### Sécurité
 
 Blog de GitHub sur la provenance et l'attestation [https://github.blog/2024-04-30-where-does-your-software-really-come-from/](https://github.blog/2024-04-30-where-does-your-software-really-come-from/)
 
-- Discute les concepts de securisation de chainne d'approvisionnement de sogiciel et comment elles s'articulent entre elle. A haut niveau
+- Discute les concepts de securisation de chaine d'approvisionnement de logiciel et comment elles s'articulent entre elle. A haut niveau
 - discute les hash pour garantir le meme fichier
 - La signature asymetrique pour prouver que j'ai signé (e.g. le hash) et donc que je garantis.
-- L'attenstation qui declare des faits sur un artifact
+- L'attestation qui declare des faits sur un artifact
 - attestation de provenance: source code et instructions de build (SLSA provenance)
 - mais il faut garantir les signature avec une autorite de certification et avec des certificats a courte vide idealement, c'est sigstore
-- MEtionne aussi The Update Framework pour s'appuyer sur cela et garantir des undates non compromis
+- Mentionne aussi The Update Framework pour s'appuyer sur cela et garantir des updates non compromis
 
 Keycloak 25 est sorti [https://www.keycloak.org/2024/06/keycloak-2500-released.html](https://www.keycloak.org/2024/06/keycloak-2500-released.html)
 
